--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mariele</title>
     <link rel="stylesheet" href="./assets/css/style.css">
     
 </head>
@@ -19,7 +19,7 @@
                 <nav>
                     <ul>
                         <a href=""><li>Home</li></a>
-                        <a href=""><li>Sobre nôs</li></a>
+                        <a href=""><li>Sobre nós</li></a>
                         <a href=""><li>Unidades</li></a>
                         <a href=""><li>Seja um Aluno</li></a>
                         <a href=""><li>Contribuições</li></a>
@@ -28,6 +28,30 @@
             </div>
         </div>
     </header>
+    <section id="banner">
+        <div class="banner_options">
+            <div class="banner1">
+                <div class="banner_title">INSCRIÇÕES 2023 ABERTAS</div>
+                <div class="banner_desc">As inscrições para 2023 já estão abertas. Venha fazer estudar conosco e fazer parte do projeto!</div>
+                <a href="">CLIQUE AQUI!</a>
+            </div>
+        </div>
+        <div class="banner_options">
+            <div class="banner2">
+                <div class="banner_title">INSCRIÇÕES 2023 ABERTAS</div>
+                <div class="banner_desc">As inscrições para 2023 já estão abertas. Venha fazer estudar conosco e fazer parte do projeto!</div>
+                <a href="">CLIQUE AQUI!</a>
+            </div>
+        </div>
+        <div class="banner_options">
+            <div class="banner3">
+                <div class="banner_title">INSCRIÇÕES 2023 ABERTAS</div>
+                <div class="banner_desc">As inscrições para 2023 já estão abertas. Venha fazer estudar conosco e fazer parte do projeto!</div>
+                <a href="">CLIQUE AQUI!</a>
+            </div>
+        </div>
+    </section>
+
 
 
 
