--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mariele</title>
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <title>Seja Aluno - Escola Mariele Franco</title>
+    <link rel="stylesheet" href="/sejaaluno/style.css">
     
 </head>
 <body>
@@ -13,7 +13,7 @@
     <header>
         <div class="container">
             <div class="logo">
-                <img src="./assets/images/logo_sem_fundo.png" width="280px" class="img">
+                <img src="/sejaaluno/images/logo_sem_fundo.png" width="280px" class="img">
             </div>
             <div class="menu">
                 <nav>
@@ -29,48 +29,34 @@
         </div>
     </header>
     <section id="banner">
-        <div class="banner_options">
-            <div class="banner1">
-                <div class="banner_title">INSCRIÇÕES 2023 ABERTAS</div>
-                <div class="banner_desc">As inscrições para 2023 já estão abertas. Venha fazer estudar conosco e fazer parte do projeto!</div>
-                <a href="">CLIQUE AQUI!</a>
-            </div>
-        </div>
-        <div class="banner_options">
-            <div class="banner2">
-                <div class="banner_title">INSCRIÇÕES 2023 ABERTAS</div>
-                <div class="banner_desc">As inscrições para 2023 já estão abertas. Venha fazer estudar conosco e fazer parte do projeto!</div>
-                <a href="">CLIQUE AQUI!</a>
-            </div>
-        </div>
-        <div class="banner_options">
-            <div class="banner3">
-                <div class="banner_title">INSCRIÇÕES 2023 ABERTAS</div>
-                <div class="banner_desc">As inscrições para 2023 já estão abertas. Venha fazer estudar conosco e fazer parte do projeto!</div>
-                <a href="">CLIQUE AQUI!</a>
-            </div>
-        </div>
+        <p class="titulo1">Venha para a escola mais tecnologica da america laina!</p>
+        <img src="/sejaaluno/images/logo_sem_fundo.png" alt="">
     </section>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-</body>
-</html>
+    <section>
+        <p class="titulo2">FORMULÁRIO PARA SE TORNAR UM ALUNO</p>
+        <p class="desc">Preencha corretamente as informações abaixo e retornaremos o seu contato o mais breve possível.</p>
+        <form id="form">
+            <h1>Cadastro da Liga dos Programadores</h1>
+            <p>Nome: <input type="text" name="q"></p>
+            <p>Email: <input type="email" name="email"> - Password: <input type="password" name="email"></p>
+            <p>Data de Nascimento: <input type="date" name="email"> - Foto: <input type="file" name="email"></p>
+            <p>Nacionalidade: <select name="select">
+                <option value="Brasil">Brasil</option>
+                <option value="Argentina">Argentina</option>
+                <option value="Uruguai">Uruguai</option>
+                <option value="Paraguai">Paraguai</option>
+            </select> - 
+            Gênero: 
+                    <input type="radio" name="macho" value="male"> Macho
+                    <input type="radio" name="fêmea" value="female"> Fêmea</p>
+            <p>Linguagens que você domina: 
+                <input type="checkbox" name="javascript"> JavaScript - 
+                <input type="checkbox" name="python"> Python -
+                <input type="checkbox" name="c"> C -
+                <input type="checkbox" name="Java"> Java
+            </p>
+            <p><textarea rows="10" cols="30">Por que você quer ser um programador?</textarea></p>
+            <button>Criar</button>
+        </form>
+    </section>
